# osvp

./: CMakeLists.txt  README.md
cuda/: draw_solid_color.cu
inc/: Application.h  Shared.h
src/: main.cpp
sutil/: CMakeLists.txt  CUDAOutputBuffer.h  Exception.h  GLDisplay.h  sutil.cpp  sutil.h
